@@ -52,6 +52,11 @@ public:
 	~AppletGnome (void);
 
 	// ========================================================================
+	//  tools
+	// ========================================================================
+	gboolean get_orientation (GtkOrientation &orient);
+
+	// ========================================================================
 	//  main
 	// ========================================================================
 	PanelApplet *panelapplet() {return (PANEL_APPLET (applet_));};
