@@ -51,6 +51,11 @@ class AppletSystray : public AppletGtk {
 	~AppletSystray (void);
 
 	// ========================================================================
+	//  tools
+	// ========================================================================
+	gboolean get_orientation (GtkOrientation &orient);
+
+	// ========================================================================
 	//  main
 	// ========================================================================
 	void show (std::string name = "dialog");
